--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
    </ul>
 
    <h2>Skills</h2>
+   <ul>
+   	<li>Public Speaking
+    <li>Interviewing
+    <li>Researching information
+    <li>Writing
+    <li>Adobe Photoshop</li>
+</ul>
+
 
 
 </body>
