--- a/basic-resume/index.html
+++ b/basic-resume/index.html
@@ -3,12 +3,15 @@
 
 <head>
 <title> Sydnee Singletary Resume</title>
-</head>head>
+<link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Sydnee Singletary</h1>
+    <div id="name">Sydnee Singletary</div>
     <b>Multiplatform Journalism</b>
     <img src="sydsing.jpg" alt="Picture of Sydnee Singletary" width="300">
+
+    <!--Contact information-->
     <ul>
     	<li><a href="mailto:ssingle1@umd.edu target="_blank">ssingle1@umd.edu</a></li>
     	<li><a href="https://www.linkedin.com/in/sydnee-singletary-15a43314b/" target="_blank">Linkedin</a></li>
@@ -17,6 +20,7 @@
 
     <p>Multi-faceted visual journlist seeking leadership opportunities.</p>
 
+<!--Experience section-->
    <h2>Experience</h2>
 
 
@@ -28,6 +32,8 @@
    <h4>Baltimore, MD  June - August 2019</h4>
    <p>Assistant producer/ Member of the camera crew, Helped set up and put away  equipment,Responsible for logging unedited recordings,Filmed interviews at festivals, boxing matches, and recording studio sessions,Edited  interviews,Photographer for festivals, boxing matches, and recording studio sessions</p>
 
+
+<!--Education section-->
    <h2>Education</h2>
 
    <h4>University of Maryland, College Park</h4>
@@ -37,6 +43,8 @@
    	<li>Graduating: 2022</li>
    </ul>
 
+
+<!--Skills section-->
    <h2>Skills</h2>
    <ul>
    	<li>Public Speaking
@@ -45,8 +53,6 @@
     <li>Writing
     <li>Adobe Photoshop</li>
 </ul>
-
-
 
 </body>
 
