--- a/Bootstraptemplate.html
+++ b/Bootstraptemplate.html
@@ -82,7 +82,7 @@
       <img src="saturnimage.jpg" alt="Picture of Saturn" class="img-fluid" alt="">
 
     </div>
-<figure class="figure">
+<figure class="figure-center">
   <figcaption class="figure-caption">A caption for the above image.</figcaption>
 </figure>
       <div class="text-center">
@@ -92,7 +92,7 @@
     reiciendis sit dolorum aut aperiam a architecto. Fuga, sit.
   </p>
 </div>
-<footer class="bg-light text-center text-lg-start">
+<footer class="bg-dark text-center text-white">
       <!--Grid column-->
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
         <h5 class="text-center">Footer text</h5>
@@ -100,7 +100,7 @@
       <!--Grid column-->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="bg-dark text-center text-white">
     © Copyright 2018 Capital News Service:
   </div>
   <!-- Copyright -->
