--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<body background="coolphoto.jpg">
+<body background="images/coolphoto.jpg">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,7 +71,7 @@
 		  	<h1 class="text-warning">Multiplatform Journalism</h1>
 		  		
 		  <!- - About Section - ->
-  <p><img src="sydsing.jpg" style="float:left;padding-right:12px" width="400px" />Hi I’m Sydnee Singletary. I am a multiplatform journalism major at the University of Maryland, College Park. I am skilled in Mircrosoft Excel, Adobe Photoshop,storytelling writing, along with years of experience with customer service in the work force. I aslo have about 5 years of experience in customer service working at various restaurants. I believe it is good to maintain work experience involving my inteneded major along with outside my major that could still help me interact in the work environment better.I have a wide variety of skills which allows me to contribute to any project presented to me.</p>
+  <p><img src="images/sydsing.jpg" style="float:left;padding-right:12px" width="400px" />Hi I’m Sydnee Singletary. I am a multiplatform journalism major at the University of Maryland, College Park. I am skilled in Mircrosoft Excel, Adobe Photoshop,storytelling writing, along with years of experience with customer service in the work force. I aslo have about 5 years of experience in customer service working at various restaurants. I believe it is good to maintain work experience involving my inteneded major along with outside my major that could still help me interact in the work environment better.I have a wide variety of skills which allows me to contribute to any project presented to me.</p>
 
 <br style="clear:both" />
 </div>
